name:          hw5
version:       0.1
cabal-version: >= 1.10

build-type: Simple
            
Executable hw5
  default-language: Haskell98
  
  main-is:          Test.hs
  
  build-depends:
    base                 >= 4   && < 5,
    test-framework       >= 0.8 && < 0.9,
    test-framework-hunit >= 0.3 && < 0.4,
    HUnit                >= 1.3 && < 1.4
