name:       hw7
version:    1.0
synopsis:   CS 360 Homework 7
author:     Geoffrey Mainland
maintainer: mainland@cs.drexel.edu
build-type: Simple

cabal-version: >=1.10

executable fsm
  default-language: Haskell2010

  main-is:
    Main.hs
    
  hs-source-dirs:
    src
  
  build-depends:
    base >= 4 && < 5

executable test
  default-language: Haskell2010

  main-is:
    Test.hs
    
  hs-source-dirs:
    src
  
  build-depends:
    base                       >=4   && < 5,
    test-framework             >=0.8 && < 0.9,
    test-framework-hunit       >=0.3 && < 0.4,
    HUnit                      >=1.3 && < 1.4

  ghc-options:
    -Wall -fno-warn-amp
  
